reg login spacing fixed

--- a/bootstrap-3.3.7/less/registration-forms.less
+++ b/bootstrap-3.3.7/less/registration-forms.less
@@ -5,8 +5,6 @@
 
 .login-form {
     border: 1px solid #eee;
-    margin-left: 15px;
-    margin-right: 15px;
     padding-left: 26px;
     padding-right: 26px;
     padding-top: inherit;
@@ -48,8 +46,6 @@
 
 .reg-form {
     border: 1px solid #eee;
-    margin-left: 15px;
-    margin-right: 15px;
     padding-left: 26px;
     padding-right: 26px;
     padding-top: inherit;
